<resources>
    <string name="app_name">Android Assignment</string>
    <string name="timer_text">Click new game to start</string>
    <string name="text_next_item">Next Color</string>
    <string name="text_win">You Win</string>
    <string name="text_lose">You Lose</string>
    <string name="new_game_button">New Game</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_game">Game Screen</string>
    <string name="menu_help">Help Screen</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_high_scores">High Scores</string>
    <string name="help_doc">https://github.com/KlutzyBubbles/help-documents/raw/master/Help%20Document.pdf</string>
    <string name="shared_preferences">com.klutzybubbles.assignment1.preferences</string>
    <string name="error_grid_min">Grid size can not be smaller than the MIN</string>
    <string name="error_grid_max">Grid size can not be bigger than the MAX</string>
    <string name="title_activity_game_settings">Game Settings</string>
    <string name="title_activity_game_view">Time to play</string>
    <string name="title_activity_scoreboard_view">High Scores</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="format_default_timer">%02d:%02d.%03d</string>
    <string name="format_default_date_time">dd/MM/yyyy HH:mm</string>
    <string name="pref_title_color_none">Blank</string>
    <string name="pref_title_color_a">Color A</string>
    <string name="pref_title_color_b">Color B</string>
    <string name="pref_title_color_highlight">Highlight</string>
    <string name="pref_title_color_border">Border</string>
    <string name="pref_title_size">Grid Size</string>
    <string name="pref_title_difficulty">Difficulty</string>
    <string name="pref_title_colors">Colors</string>
    <string name="pref_title_game_settings">Values</string>
    <string name="pref_key_size">size</string>
    <string name="pref_key_difficulty">difficulty</string>
    <string name="pref_key_blank">blank</string>
    <string name="pref_key_color_a">color_a</string>
    <string name="pref_key_color_b">color_b</string>
    <string name="pref_key_highlight">highlight</string>
    <string name="pref_key_border">border</string>
    <string name="pref_default_general">3</string>
    <string name="pref_default_blank">#696969</string>
    <string name="pref_default_color_a">#FF0000</string>
    <string name="pref_default_color_b">#0000FF</string>
    <string name="pref_default_highlight">#FFFFFF</string>
    <string name="pref_default_border">#000000</string>
    <string-array name="list_color_names">
        <item>White</item>
        <item>Ivory</item>
        <item>Light Yellow</item>
        <item>Yellow</item>
        <item>Snow</item>
        <item>Floral White</item>
        <item>Lemon Chiffon</item>
        <item>Cornsilk</item>
        <item>Seashell</item>
        <item>Lavender Blush</item>
        <item>Papaya Whip</item>
        <item>Blanched Almond</item>
        <item>Misty Rose</item>
        <item>Bisque</item>
        <item>Moccasin</item>
        <item>Navajo White</item>
        <item>Peach Puff</item>
        <item>Gold</item>
        <item>Pink</item>
        <item>Light Pink</item>
        <item>Orange</item>
        <item>Light Salmon</item>
        <item>Dark Orange</item>
        <item>Coral</item>
        <item>Hot Pink</item>
        <item>Tomato</item>
        <item>Orange Red</item>
        <item>Deep Pink</item>
        <item>Fuchsia</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Old Lace</item>
        <item>Light Goldenrod Yellow</item>
        <item>Linen</item>
        <item>Antique White</item>
        <item>Salmon</item>
        <item>Ghost White</item>
        <item>Mint Cream</item>
        <item>White Smoke</item>
        <item>Beige</item>
        <item>Wheat</item>
        <item>Sandy Brown</item>
        <item>Azure</item>
        <item>Honeydew</item>
        <item>Alice Blue</item>
        <item>Khaki</item>
        <item>Light Coral</item>
        <item>Pale Goldenrod</item>
        <item>Violet</item>
        <item>Dark Salmon</item>
        <item>Lavender</item>
        <item>Light Cyan</item>
        <item>Burly Wood</item>
        <item>Plum</item>
        <item>Gainsboro</item>
        <item>Crimson</item>
        <item>Pale Violet Red</item>
        <item>Goldenrod</item>
        <item>Orchid</item>
        <item>Thistle</item>
        <item>Light Grey</item>
        <item>Tan</item>
        <item>Chocolate</item>
        <item>Peru</item>
        <item>Indian Red</item>
        <item>Medium Violet Red</item>
        <item>Silver</item>
        <item>Dark Khaki</item>
        <item>Rosy Brown</item>
        <item>Medium Orchid</item>
        <item>Dark Goldenrod</item>
        <item>Fire Brick</item>
        <item>Powder Blue</item>
        <item>Light Steel Blue</item>
        <item>Pale Turquoise</item>
        <item>Green Yellow</item>
        <item>Light Blue</item>
        <item>Dark Gray</item>
        <item>Brown</item>
        <item>Sienna</item>
        <item>Yellow Green</item>
        <item>Dark Orchid</item>
        <item>Pale Green</item>
        <item>Dark Violet</item>
        <item>Medium Purple</item>
        <item>Light Green</item>
        <item>Dark Sea Green</item>
        <item>Saddle Brown</item>
        <item>Dark Magenta</item>
        <item>Dark Red</item>
        <item>Blue Violet</item>
        <item>Light Sky Blue</item>
        <item>Sky Blue</item>
        <item>Gray</item>
        <item>Olive</item>
        <item>Purple</item>
        <item>Maroon</item>
        <item>Aquamarine</item>
        <item>Chartreuse</item>
        <item>Lawn Green</item>
        <item>Medium Slate Blue</item>
        <item>Light Slate Gray</item>
        <item>Slate Gray</item>
        <item>Olive Drab</item>
        <item>Slate Blue</item>
        <item>Dim Gray</item>
        <item>Medium Aquamarine</item>
        <item>Cornflower Blue</item>
        <item>Cadet Blue</item>
        <item>Dark Olive Green</item>
        <item>Indigo</item>
        <item>Medium Turquoise</item>
        <item>Dark Slate Blue</item>
        <item>Steel Blue</item>
        <item>Royal Blue</item>
        <item>Turquoise</item>
        <item>Medium Sea Green</item>
        <item>Lime Green</item>
        <item>Dark Slate Gray</item>
        <item>Sea Green</item>
        <item>Forest Green</item>
        <item>Light Sea Green</item>
        <item>Dodger Blue</item>
        <item>Midnight Blue</item>
        <item>Aqua</item>
        <item>Cyan</item>
        <item>Spring Green</item>
        <item>Lime</item>
        <item>Medium Spring Green</item>
        <item>Dark Turquoise</item>
        <item>Deep Sky Blue</item>
        <item>Dark Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Dark Green</item>
        <item>Blue</item>
        <item>Medium Blue</item>
        <item>Dark Blue</item>
        <item>Navy</item>
        <item>Black</item>
    </string-array>
</resources>