<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_title_colors">
        <ListPreference
            android:defaultValue="@string/pref_default_blank"
            android:entries="@array/list_color_names"
            android:entryValues="@array/list_colors"
            android:key="blank"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_none"/>

        <ListPreference
            android:defaultValue="@string/pref_default_color_a"
            android:entries="@array/list_color_names"
            android:entryValues="@array/list_colors"
            android:key="color_a"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_a"/>

        <ListPreference
            android:defaultValue="@string/pref_default_color_b"
            android:entries="@array/list_color_names"
            android:entryValues="@array/list_colors"
            android:key="color_b"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_b"/>

        <ListPreference
            android:defaultValue="@string/pref_default_highlight"
            android:entries="@array/list_color_names"
            android:entryValues="@array/list_colors"
            android:key="highlight"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_highlight"/>

        <ListPreference
            android:defaultValue="@string/pref_default_border"
            android:entries="@array/list_color_names"
            android:entryValues="@array/list_colors"
            android:key="border"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_border"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_game_settings">
        <ListPreference
            android:defaultValue="@string/pref_default_general"
            android:entries="@array/list_size_names"
            android:entryValues="@array/list_size"
            android:key="size"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_size"/>

        <ListPreference
            android:defaultValue="@string/pref_default_general"
            android:entries="@array/list_difficulty_names"
            android:entryValues="@array/list_difficulty"
            android:key="difficulty"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_difficulty"/>
    </PreferenceCategory>
</PreferenceScreen>
